# sibyl

./: .dockerignore  .env.example  .env.quickstart.example  .env.quickstart.test  .env.test.example  .gitignore  .pre-commit-config.yaml  .prettierignore  .prototools  CLAUDE.md  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  Tiltfile  compose.e2e.yml  docker-compose.prod.yml  docker-compose.quickstart.test.yml  docker-compose.quickstart.yml  docker-compose.yml  index.yaml  install.sh  justfile  moon.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  setup-dev.ps1  setup-dev.sh  sibyl-1.0.2.tgz  sibyl-1.1.2.tgz  sibyl-surrealdb-1.0.2.tgz  sibyl-surrealdb-1.1.2.tgz
.claude/: mcp.json.example
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  setup.sh
.moon/: toolchain.yml  toolchains.yml  workspace.yml
Formula/: sibyl-runner.rb  sibyl.rb
alembic/: env.py
apps/runner/: Dockerfile  Dockerfile.sandbox  README.md  docker-compose.yaml  moon.yml  pyproject.toml
apps/runner/src/sibyl_runner/: __init__.py  cli.py  config.py  connection.py  daemon.py  project_registry.py
apps/runner/tests/: __init__.py
baselines/: graph_smoke.jsonl  manifest.json  mcp_smoke.jsonl  search_queries.jsonl
benchmarks/: compare_eval_reports.py  context_pack_cases.json  context_pack_eval.py  git_provenance.py  live_runtime_eval.py  longmemeval_bench.py  longmemeval_live.py  longmemeval_qa.py  longmemeval_replay.py  longmemeval_v2_ablations.py  longmemeval_v2_causal_ablation.py  longmemeval_v2_causal_ablation_report.py  longmemeval_v2_composition_replay.py  longmemeval_v2_composition_validation.json  longmemeval_v2_composition_validation_v2.json  longmemeval_v2_diagnostic_slice.json  longmemeval_v2_diagnostics.py  longmemeval_v2_live_retrieval.py  longmemeval_v2_live_smoke.py  longmemeval_v2_official.py  longmemeval_v2_probe.py  longmemeval_v2_projection_audit.py  longmemeval_v2_reader_holdout.py  longmemeval_v2_reader_holdout_report.py  longmemeval_v2_reader_replay.py  longmemeval_v2_reader_replay_replication.py  longmemeval_v2_reader_replication.py  longmemeval_v2_reader_replication_report.py  longmemeval_v2_reader_report.py  longmemeval_v2_repair_project.py  longmemeval_v2_validation_slice.py  longmemeval_v2_validation_slice_v2.py  provider_usage.py  surreal_vector_index_bench.py
docs/: .prettierignore  BACKEND_DEEP_REVIEW_2025-12-21.md  SCREENSHOTS_NEEDED.md  WEBAPP_DEEP_REVIEW_2025-12-21.md  agent-system-prompt.md  index.md  moon.yml  package.json  sibyl-prompt-snippet.md
examples/: README.md  mcp_client_example.py  quickstart.py  task_workflow_example.py
hooks/: README.md  configure.py  moon.yml  post-tool-use.py  pyproject.toml  session-start.py  stop.py  user-prompt-submit.py
infra/: moon.yml
scripts/: install.sh
skills/: moon.yml
tests/: test_auth_api_keys.py  test_auth_context.py  test_auth_cookie_config.py  test_auth_invitation_token.py  test_auth_jwt.py  test_auth_mcp_token_verifier.py  test_auth_oauth_state.py  test_auth_org_membership_model.py  test_auth_organization_model.py  test_auth_sessions.py  test_auth_settings.py  test_auth_user_model.py  test_cache.py  test_cli_auth_store.py  test_cli_client_auth.py  test_cli_epic.py  test_cli_org_client.py  test_communities.py  test_concurrent_writes.py  test_config_security.py  test_crawler_chunker.py  test_dedup.py  test_device_auth.py  test_e2e_workflows.py  test_error_sanitization.py  test_graph_integration.py  test_harness.py  test_integration_graphrag.py  test_mcp_oauth_session_refresh.py  (+13 more)
(+1401 files in other folders)
