[project]
name = "sibyl-hooks"
version = "0.1.0"
description = "Claude Code hooks for Sibyl knowledge injection"
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "ruff>=0.9",
    "ty>=0.0.13",
]

[tool.ruff]
target-version = "py311"
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]  # Line length handled by formatter

[tool.ruff.format]
quote-style = "double"
